--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview-https": "serve dist"
   },
   "dependencies": {
+    "@tauri-apps/api": "^1.0.0-rc.2",
     "@vueuse/core": "^7.7.1",
     "@vueuse/head": "^0.7.5",
     "axios": "^0.26.1",
@@ -19,14 +20,15 @@
     "sass": "^1.49.9",
     "vue": "^3.2.31",
     "vue-demi": "^0.12.1",
-    "vue-router": "^4.0.13",
-    "@tauri-apps/api": "^1.0.0-rc.2"
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.18.5",
     "@iconify-json/carbon": "^1.1.1",
+    "@tauri-apps/cli": "^1.0.0-rc.7",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
+    "@unocss/extractor-pug": "^0.28.0",
     "@unocss/reset": "^0.27.5",
     "@vitejs/plugin-vue": "^2.2.4",
     "@vue/test-utils": "^2.0.0-rc.18",
@@ -44,7 +46,6 @@
     "vite-plugin-md": "^0.11.9",
     "vite-plugin-pages": "^0.21.4",
     "vite-plugin-vue-layouts": "^0.6.0",
-    "vue-tsc": "^0.32.1",
-    "@tauri-apps/cli": "^1.0.0-rc.7"
+    "vue-tsc": "^0.32.1"
   }
 }
