don't show unusable images

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,6 +26,7 @@ futures-util = "*"
 toml = "*"
 wallpaper = "*"
 env_logger = "*"
+thiserror = "*"
 
 [features]
 # by default Tauri runs in production mode
