--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,11 @@
-name: "test-on-pr"
+name: "publish"
 on:
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Version to set for the build'
-        required: false
+  push:
+    branches:
+      - release
 
 jobs:
-  test-tauri:
+  publish-tauri:
     strategy:
       fail-fast: false
       matrix:
@@ -19,7 +17,7 @@ jobs:
     - name: setup node
       uses: actions/setup-node@v1
       with:
-        node-version: 12
+        node-version: 16
     - name: install Rust stable
       uses: actions-rs/toolchain@v1
       with:
@@ -36,5 +34,9 @@ jobs:
     - uses: tauri-apps/tauri-action@v0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
+      with:
+        tagName: app-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version
+        releaseName: "App v__VERSION__"
+        body: "See the assets to download this version and install."
+        draft: true
+        prerelease: false
