--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,7 @@ on:
   push:
     branches:
       - release
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Version to set for the build'
-        required: false
+
 jobs:
   publish-tauri:
     strategy:
@@ -26,21 +22,19 @@ jobs:
       uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
-    - name: install tauri bundler
-      run: cargo install tauri-bundler --force
-    - name: install webkit2gtk (ubuntu only)
+    - name: install dependencies (ubuntu only)
       if: matrix.platform == 'ubuntu-latest'
       run: |
         sudo apt-get update
-        sudo apt-get install -y webkit2gtk-4.0
+        sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
     - name: install app dependencies and build it
-      run: yarn && yarn build
+      run: yarn
     - uses: tauri-apps/tauri-action@v0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tagName: app-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version
         releaseName: "App v__VERSION__"
-        body: "See the assets to download this version and install."
-        draft: true
+        releaseBody: "See the assets to download this version and install."
+        releaseDraft: true
         prerelease: false
