show local files

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,6 +27,7 @@ toml = "*"
 wallpaper = {git="https://github.com/andr35/wallpaper.rs.git"}
 env_logger = "*"
 thiserror = "*"
+image = "*"
 
 [features]
 # by default Tauri runs in production mode
