--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@unocss/extractor-pug": "^0.28.0",
     "@unocss/reset": "^0.27.5",
     "@vitejs/plugin-vue": "^2.2.4",
+    "@volar/vue-language-plugin-pug": "^1.0.9",
     "@vue/test-utils": "^2.0.0-rc.18",
     "critters": "^0.0.16",
     "cross-env": "^7.0.3",
@@ -46,6 +47,6 @@
     "vite-plugin-md": "^0.11.9",
     "vite-plugin-pages": "^0.21.4",
     "vite-plugin-vue-layouts": "^0.6.0",
-    "vue-tsc": "^0.32.1"
+    "vue-tsc": "^1.0.9"
   }
 }
