--- a/package.json
+++ b/package.json
@@ -3,50 +3,61 @@
   "packageManager": "pnpm@6.32.3",
   "scripts": {
     "build": "vite build",
-    "dev": "vite --port 3000 ",
+    "dev": "vite --port 3333",
     "lint": "eslint .",
     "preview": "vite preview",
     "preview-https": "serve dist"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.0.0-rc.2",
-    "@vueuse/core": "^7.7.1",
-    "@vueuse/head": "^0.7.5",
-    "axios": "^0.26.1",
+    "@tauri-apps/api": "^1.1.0",
+    "@unocss/extractor-pug": "^0.46.3",
+    "@unocss/reset": "^0.46.2",
+    "@vueuse/core": "^9.4.0",
+    "@vueuse/head": "^0.9.8",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.11",
-    "prism-theme-vars": "^0.2.2",
+    "pinia": "^2.0.23",
     "pug": "^3.0.2",
-    "sass": "^1.49.9",
-    "vue": "^3.2.31",
-    "vue-demi": "^0.12.1",
-    "vue-router": "^4.0.13"
+    "sass": "^1.56.0",
+    "vue": "^3.2.41",
+    "vue-demi": "^0.13.11",
+    "vue-i18n": "^9.2.2",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.18.5",
-    "@iconify-json/carbon": "^1.1.1",
+    "@antfu/eslint-config": "^0.29.2",
+    "@iconify-json/carbon": "^1.1.9",
+    "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@tauri-apps/cli": "1.0.0-rc.7",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
-    "@unocss/extractor-pug": "^0.28.0",
-    "@unocss/reset": "^0.27.5",
-    "@vitejs/plugin-vue": "^2.2.4",
-    "@volar/vue-language-plugin-pug": "^1.0.9",
-    "@vue/test-utils": "^2.0.0-rc.18",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "@vue/test-utils": "^2.2.1",
     "critters": "^0.0.16",
     "cross-env": "^7.0.3",
-    "eslint": "^8.10.0",
+    "cypress": "^10.11.0",
+    "eslint": "^8.26.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "https-localhost": "^4.7.1",
-    "pnpm": "^6.32.3",
-    "typescript": "^4.6.2",
-    "unocss": "^0.27.5",
-    "unplugin-auto-import": "^0.6.1",
-    "unplugin-vue-components": "^0.17.21",
-    "vite": "^2.8.6",
-    "vite-plugin-inspect": "^0.4.3",
-    "vite-plugin-md": "^0.11.9",
-    "vite-plugin-pages": "^0.21.4",
-    "vite-plugin-vue-layouts": "^0.6.0",
-    "vue-tsc": "^1.0.9"
+    "markdown-it-link-attributes": "^4.0.1",
+    "markdown-it-shiki": "^0.6.1",
+    "pnpm": "^7.14.1",
+    "shiki": "^0.11.1",
+    "taze": "^0.8.3",
+    "typescript": "^4.8.4",
+    "unocss": "^0.46.2",
+    "unplugin-auto-import": "^0.11.4",
+    "unplugin-vue-components": "^0.22.9",
+    "vite": "^3.2.2",
+    "vite-plugin-inspect": "^0.7.5",
+    "vite-plugin-pages": "^0.27.1",
+    "vite-plugin-pwa": "^0.13.1",
+    "vite-plugin-vue-component-preview": "^0.3.3",
+    "vite-plugin-vue-layouts": "^0.7.0",
+    "vite-plugin-vue-markdown": "^0.22.1",
+    "vite-ssg": "^0.21.2",
+    "vite-ssg-sitemap": "^0.4.3",
+    "vitest": "^0.24.4",
+    "vue-tsc": "^1.0.9",
+    "@types/node": "18.0.0"
   }
 }
