--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
     "vite-ssg": "^0.21.2",
     "vite-ssg-sitemap": "^0.4.3",
     "vitest": "^0.24.4",
-    "vue-tsc": "^1.0.9",
-    "@types/node": "18.0.0"
+    "vue-tsc": "^1.0.9"
   }
 }
