--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,7 @@ on:
   push:
     branches:
       - release
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Version to set for the build'
-        required: false
+
 jobs:
   publish-tauri:
     strategy:
@@ -25,7 +21,7 @@ jobs:
     - name: install Rust stable
       uses: actions-rs/toolchain@v1
       with:
-        toolchain: stable
+        toolchain: nightly
     - name: install dependencies (ubuntu only)
       if: matrix.platform == 'ubuntu-latest'
       run: |
