--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview-https": "serve dist"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.1.0",
+    "@tauri-apps/api": "^1.1.1",
     "@unocss/extractor-pug": "^0.46.3",
     "@unocss/reset": "^0.46.2",
     "@vueuse/core": "^9.4.0",
@@ -27,7 +27,7 @@
     "@antfu/eslint-config": "^0.29.2",
     "@iconify-json/carbon": "^1.1.9",
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
-    "@tauri-apps/cli": "1.0.0-rc.7",
+    "@tauri-apps/cli": "1.1.1",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^3.2.0",
