--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "packageManager": "pnpm@6.32.3",
+  "version": "1.0.0",
   "scripts": {
     "build": "vite build",
     "dev": "vite --port 3333",
