--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "reddit-wallpapers"
-version = "0.1.0"
+version = "0.1.1"
 description = "Reddit Wallpapers"
 authors = ["Sebastian "]
 repository = "https://github.com/Septias/reddit-wallpapers"
@@ -26,6 +26,7 @@ env_logger = "*"
 thiserror = "*"
 image = "*"
 anyhow = "*"
+tauri-plugin-positioner = "1.0"
 
 [features]
 # by default Tauri runs in production mode
