--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,18 +14,18 @@ tauri-build = { version = "1.1.1", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.1.1", features = ["api-all", "devtools"] }
+tauri = { version = "1.2.4", features = ["api-all", "devtools"] }
 reqwest = { version = "^0.11", features = ["json", "stream"] }
 tokio = { version = "1", features = ["full"] }
-log = "*"
-json = "*"
-futures-util = "*"
-toml = "*"
+log = "0.4"
+json = "0.12"
+futures-util = "0.3"
+toml = "0.7"
 wallpaper = {git="https://github.com/andr35/wallpaper.rs.git"}
-env_logger = "*"
-thiserror = "*"
-image = "*"
-anyhow = "*"
+env_logger = "0.10"
+thiserror = "1.0"
+image = "0.24"
+anyhow = "1.0"
 tauri-plugin-positioner = "1.0"
 
 [features]
