--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,14 +14,14 @@ tauri-build = { version = "1.2.1", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2.4", features = ["api-all", "devtools"] }
+tauri = { version = "1.2.4", features = ["protocol-asset", "devtools"] }
 reqwest = { version = "^0.11", features = ["json", "stream"] }
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["macros", "default"] }
 log = "0.4"
 json = "0.12"
 futures-util = "0.3"
 toml = "0.7"
-wallpaper = {git="https://github.com/andr35/wallpaper.rs.git"}
+wallpaper = "3.2.0"
 env_logger = "0.10"
 thiserror = "1.0"
 image = "0.24"
