--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -2,7 +2,7 @@
 name = "reddit-wallpapers"
 version = "0.1.2"
 description = "Reddit Wallpapers"
-authors = ["Sebastian Klähn <xxsebastian.klaehnxx@gmail.com>"]
+authors = ["Sebastian "]
 repository = "https://github.com/Septias/reddit-wallpapers"
 default-run = "reddit-wallpapers"
 edition = "2021"
@@ -14,7 +14,7 @@ tauri-build = { version = "1.2.1", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2.4", features = ["devtools", "dialog-open", "protocol-asset"] }
+tauri = { version = "1.2.4", features = ["devtools", "protocol-asset"] }
 reqwest = { version = "^0.11", features = ["json", "stream"] }
 tokio = { version = "1", features = ["macros", "default"] }
 log = "0.4"
