--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "packageManager": "pnpm@6.32.3",
-  "version": "1.0.0",
+  "version": "0.1.2",
   "scripts": {
     "build": "vite build",
     "dev": "vite --port 3333",
@@ -27,22 +27,16 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.29.4",
     "@iconify-json/carbon": "^1.1.15",
-    "@intlify/vite-plugin-vue-i18n": "^6.0.3",
-    "@tauri-apps/cli": "1.1.1",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vue/test-utils": "^2.2.10",
     "critters": "^0.0.16",
     "cross-env": "^7.0.3",
-    "cypress": "^10.11.0",
     "eslint": "^8.34.0",
     "eslint-plugin-cypress": "^2.12.1",
     "https-localhost": "^4.7.1",
-    "markdown-it-link-attributes": "^4.0.1",
-    "markdown-it-shiki": "^0.6.1",
     "pnpm": "^7.27.0",
-    "shiki": "^0.11.1",
     "taze": "^0.8.5",
     "typescript": "^4.9.5",
     "unocss": "^0.46.5",
@@ -53,11 +47,11 @@
     "vite-plugin-pages": "^0.27.1",
     "vite-plugin-pwa": "^0.13.3",
     "vite-plugin-vue-component-preview": "^0.3.4",
-    "vite-plugin-vue-layouts": "^0.7.0",
     "vite-plugin-vue-markdown": "^0.22.4",
     "vite-ssg": "^0.21.2",
     "vite-ssg-sitemap": "^0.4.3",
     "vitest": "^0.24.5",
-    "vue-tsc": "^1.0.24"
+    "vue-tsc": "^1.0.24",
+    "@volar/vue-language-plugin-pug": "1.2.0"
   }
 }
