--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "packageManager": "pnpm@6.32.3",
   "version": "0.1.2",
+  "name": "reddit_wallpapers",
   "scripts": {
     "build": "vite build",
     "dev": "vite --port 3333",
