--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,13 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
+dist/
 dist-ssr
 *.local
 .direnv
 result
 
+!src-tauri/dist
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
