--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,9 +20,9 @@ tokio = { version = "1", features = ["macros", "default"] }
 log = "0.4"
 json = "0.12"
 futures-util = "0.3"
-toml = "0.7"
-wallpaper = {git="https://github.com/reujab/wallpaper.rs.git", rev="20270387cb6533364830d18e8f69bb5b5f01ad43"}
-env_logger = "0.10"
+toml = "0.8.10"
+more-wallpapers = "0.3.1"
+env_logger = "0.11.2"
 thiserror = "1.0"
 image = "0.24"
 anyhow = "1.0"
@@ -31,7 +31,7 @@ tauri-plugin-positioner = "1.0"
 [features]
 # by default Tauri runs in production mode
 # when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
-default = [ "custom-protocol" ]
+default = ["custom-protocol"]
 # this feature is used used for production builds where `devPath` points to the filesystem
 # DO NOT remove this
-custom-protocol = [ "tauri/custom-protocol" ]
+custom-protocol = ["tauri/custom-protocol"]
