--- a/package.json
+++ b/package.json
@@ -11,48 +11,48 @@
     "preview-https": "serve dist"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.2.0",
-    "@unocss/extractor-pug": "^0.46.5",
-    "@unocss/reset": "^0.46.5",
-    "@vueuse/core": "^9.12.0",
-    "@vueuse/head": "^0.9.8",
+    "@tauri-apps/api": "^1.5.3",
+    "@unocss/extractor-pug": "^0.58.5",
+    "@unocss/reset": "^0.58.5",
+    "@vueuse/core": "^10.9.0",
+    "@vueuse/head": "^2.0.0",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.30",
+    "pinia": "^2.1.7",
     "pug": "^3.0.2",
-    "sass": "^1.58.1",
-    "vue": "^3.2.47",
-    "vue-demi": "^0.13.11",
-    "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.6"
+    "sass": "^1.71.1",
+    "vue": "^3.4.21",
+    "vue-demi": "^0.14.7",
+    "vue-i18n": "^9.10.1",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.29.4",
-    "@iconify-json/carbon": "^1.1.15",
-    "@types/markdown-it-link-attributes": "^3.0.1",
-    "@types/nprogress": "^0.2.0",
-    "@vitejs/plugin-vue": "^3.2.0",
-    "@vue/test-utils": "^2.2.10",
-    "critters": "^0.0.16",
+    "@antfu/eslint-config": "^2.6.4",
+    "@iconify-json/carbon": "^1.1.30",
+    "@types/markdown-it-link-attributes": "^3.0.4",
+    "@types/nprogress": "^0.2.3",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@volar/vue-language-plugin-pug": "1.6.5",
+    "@vue/test-utils": "^2.4.4",
+    "critters": "^0.0.21",
     "cross-env": "^7.0.3",
-    "eslint": "^8.34.0",
-    "eslint-plugin-cypress": "^2.12.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-cypress": "^2.15.1",
     "https-localhost": "^4.7.1",
-    "pnpm": "^7.27.0",
-    "taze": "^0.8.5",
-    "typescript": "^4.9.5",
-    "unocss": "^0.46.5",
-    "unplugin-auto-import": "^0.11.5",
-    "unplugin-vue-components": "^0.22.12",
-    "vite": "^3.2.5",
-    "vite-plugin-inspect": "^0.7.15",
-    "vite-plugin-pages": "^0.27.1",
-    "vite-plugin-pwa": "^0.13.3",
-    "vite-plugin-vue-component-preview": "^0.3.4",
-    "vite-plugin-vue-markdown": "^0.22.4",
-    "vite-ssg": "^0.21.2",
-    "vite-ssg-sitemap": "^0.4.3",
-    "vitest": "^0.24.5",
-    "vue-tsc": "^1.0.24",
-    "@volar/vue-language-plugin-pug": "1.2.0"
+    "pnpm": "^8.15.4",
+    "taze": "^0.13.3",
+    "typescript": "^5.3.3",
+    "unocss": "^0.58.5",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
+    "vite": "^5.1.4",
+    "vite-plugin-inspect": "^0.8.3",
+    "vite-plugin-pages": "^0.32.0",
+    "vite-plugin-pwa": "^0.19.2",
+    "vite-plugin-vue-component-preview": "^1.1.6",
+    "vite-plugin-vue-markdown": "^0.23.8",
+    "vite-ssg": "^0.23.6",
+    "vite-ssg-sitemap": "^0.6.1",
+    "vitest": "^1.3.1",
+    "vue-tsc": "^2.0.2"
   }
 }
