--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,7 +21,7 @@ log = "0.4"
 json = "0.12"
 futures-util = "0.3"
 toml = "0.8.10"
-more-wallpapers = "0.3.1"
+wallpaper = {git="https://github.com/reujab/wallpaper.rs.git", rev="20270387cb6533364830d18e8f69bb5b5f01ad43" }
 env_logger = "0.11.2"
 thiserror = "1.0"
 image = "0.24"
